tests/ui/infinite/type-param-default-with-diverging-assoc-type.current.stderr
error[E0275]: overflow evaluating the requirement `<u8 as Trait>::Diverges<u8> == _`
  --> $DIR/type-param-default-with-diverging-assoc-type.rs:13:12
   |
LL | struct Bar<T: ?Sized = <u8 as Trait>::Diverges<u8>>(Box<T>);
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
